@@ -3,6 +3,7 @@ package com.minimall.service;
 import com.minimall.dto.CouponRequest;
 import com.minimall.dto.CouponResponse;
 import com.minimall.model.Coupon;
+import com.minimall.model.Order;
 import com.minimall.model.User;
 import com.minimall.model.UserCoupon;
 import com.minimall.repository.CouponRepository;
@@ -10,6 +11,7 @@ import com.minimall.repository.OrderRepository;
 import com.minimall.repository.UserCouponRepository;
 import com.minimall.repository.UserRepository;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
@@ -17,6 +19,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
 import java.math.BigDecimal;
 import java.time.Instant;
@@ -32,10 +35,17 @@ import static org.mockito.Mockito.*;
 @ExtendWith(MockitoExtension.class)
 class CouponServiceTest {
 
-    @Mock private CouponRepository couponRepository;
-    @Mock private UserCouponRepository userCouponRepository;
-    @Mock private UserRepository userRepository;
-    @Mock private OrderRepository orderRepository;
+    @Mock
+    private CouponRepository couponRepository;
+
+    @Mock
+    private UserCouponRepository userCouponRepository;
+
+    @Mock
+    private UserRepository userRepository;
+
+    @Mock
+    private OrderRepository orderRepository;
 
     private CouponService couponService;
 
@@ -45,35 +55,7 @@ class CouponServiceTest {
     }
 
     @Test
-    void createCoupon_savesAndReturnsCoupon() {
-        CouponRequest request = new CouponRequest(
-            "SAVE10", BigDecimal.valueOf(10), BigDecimal.valueOf(100),
-            Instant.now(), Instant.now().plus(30, ChronoUnit.DAYS), 100, "CASH"
-        );
-        Coupon savedCoupon = new Coupon();
-        savedCoupon.setId("coupon-1");
-        savedCoupon.setCode("SAVE10");
-        savedCoupon.setCouponType(Coupon.CouponType.CASH);
-        savedCoupon.setDiscountAmount(BigDecimal.valueOf(10));
-        savedCoupon.setMinOrderAmount(BigDecimal.valueOf(100));
-        savedCoupon.setValidFrom(request.validFrom());
-        savedCoupon.setValidUntil(request.validUntil());
-        savedCoupon.setTotalQuantity(100);
-        savedCoupon.setRemainingQuantity(100);
-        savedCoupon.setActive(true);
-
-        when(couponRepository.save(any(Coupon.class))).thenReturn(savedCoupon);
-
-        CouponResponse response = couponService.createCoupon(request);
-
-        assertNotNull(response);
-        assertEquals("coupon-1", response.id());
-        assertEquals("SAVE10", response.code());
-        assertEquals("CASH", response.couponType());
-        verify(couponRepository).save(any(Coupon.class));
-    }
-
-    @Test
+    @DisplayName("getAvailableCoupons returns active coupons only")
     void getAvailableCoupons_returnsActiveCoupons() {
         Coupon coupon = new Coupon();
         coupon.setId("coupon-1");
@@ -87,11 +69,13 @@ class CouponServiceTest {
         List<CouponResponse> result = couponService.getAvailableCoupons();
 
         assertEquals(1, result.size());
-        assertEquals("coupon-1", result.get(0).id());
+        assertEquals("SAVE10", result.get(0).code());
+        verify(couponRepository).findByIsActiveTrue();
     }
 
     @Test
-    void getAvailableCoupons_withPagination_returnsPagedCoupons() {
+    @DisplayName("getAvailableCoupons with pagination returns paginated results")
+    void getAvailableCoupons_paged_returnsPaginatedResults() {
         Coupon coupon = new Coupon();
         coupon.setId("coupon-1");
         coupon.setCode("SAVE10");
@@ -99,15 +83,19 @@ class CouponServiceTest {
         coupon.setDiscountAmount(BigDecimal.valueOf(10));
         coupon.setActive(true);
 
-        Page<Coupon> page = new PageImpl<>(List.of(coupon));
-        when(couponRepository.findByIsActiveTrue(any(PageRequest.class))).thenReturn(page);
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<Coupon> page = new PageImpl<>(List.of(coupon), pageable, 1);
 
-        Page<CouponResponse> result = couponService.getAvailableCoupons(PageRequest.of(0, 10));
+        when(couponRepository.findByIsActiveTrue(pageable)).thenReturn(page);
+
+        Page<CouponResponse> result = couponService.getAvailableCoupons(pageable);
 
         assertEquals(1, result.getTotalElements());
+        assertEquals("SAVE10", result.getContent().get(0).code());
     }
 
     @Test
+    @DisplayName("claimCoupon successfully claims coupon for user")
     void claimCoupon_success() {
         User user = new User();
         user.setId("user-1");
@@ -122,75 +110,55 @@ class CouponServiceTest {
         when(userRepository.findById("user-1")).thenReturn(Optional.of(user));
         when(couponRepository.findById("coupon-1")).thenReturn(Optional.of(coupon));
         when(userCouponRepository.existsByUserIdAndCouponId("user-1", "coupon-1")).thenReturn(false);
-        when(orderRepository.findByUserIdOrderByCreatedAtDesc("user-1")).thenReturn(Collections.emptyList());
-        when(userCouponRepository.save(any(UserCoupon.class))).thenReturn(new UserCoupon());
+        when(orderRepository.findByUserIdOrderByCreatedAtDesc("user-1")).thenReturn(List.of());
         when(couponRepository.save(any(Coupon.class))).thenReturn(coupon);
 
-        CouponResponse response = couponService.claimCoupon("user-1", "coupon-1");
+        CouponResponse result = couponService.claimCoupon("user-1", "coupon-1");
 
-        assertNotNull(response);
-        assertEquals("coupon-1", response.id());
+        assertNotNull(result);
+        assertEquals("NEWUSER", result.code());
         verify(userCouponRepository).save(any(UserCoupon.class));
+        verify(couponRepository).save(coupon);
     }
 
     @Test
-    void claimCoupon_throwsWhenUserNotFound() {
-        when(userRepository.findById("invalid-user")).thenReturn(Optional.empty());
-
-        assertThrows(IllegalArgumentException.class, () ->
-            couponService.claimCoupon("invalid-user", "coupon-1")
-        );
-    }
-
-    @Test
-    void claimCoupon_throwsWhenCouponNotFound() {
-        User user = new User();
-        user.setId("user-1");
-        when(userRepository.findById("user-1")).thenReturn(Optional.of(user));
-        when(couponRepository.findById("invalid-coupon")).thenReturn(Optional.empty());
-
-        assertThrows(IllegalArgumentException.class, () ->
-            couponService.claimCoupon("user-1", "invalid-coupon")
-        );
-    }
-
-    @Test
-    void claimCoupon_throwsWhenCouponExhausted() {
+    @DisplayName("claimCoupon throws when coupon exhausted")
+    void claimCoupon_exhausted_throws() {
         User user = new User();
         user.setId("user-1");
 
         Coupon coupon = new Coupon();
         coupon.setId("coupon-1");
         coupon.setRemainingQuantity(0);
+        coupon.setActive(true);
 
         when(userRepository.findById("user-1")).thenReturn(Optional.of(user));
         when(couponRepository.findById("coupon-1")).thenReturn(Optional.of(coupon));
 
-        assertThrows(IllegalStateException.class, () ->
-            couponService.claimCoupon("user-1", "coupon-1")
-        );
+        assertThrows(IllegalStateException.class, () -> couponService.claimCoupon("user-1", "coupon-1"));
     }
 
     @Test
-    void claimCoupon_throwsWhenAlreadyClaimed() {
+    @DisplayName("claimCoupon throws when already claimed")
+    void claimCoupon_alreadyClaimed_throws() {
         User user = new User();
         user.setId("user-1");
 
         Coupon coupon = new Coupon();
         coupon.setId("coupon-1");
         coupon.setRemainingQuantity(10);
+        coupon.setActive(true);
 
         when(userRepository.findById("user-1")).thenReturn(Optional.of(user));
         when(couponRepository.findById("coupon-1")).thenReturn(Optional.of(coupon));
         when(userCouponRepository.existsByUserIdAndCouponId("user-1", "coupon-1")).thenReturn(true);
 
-        assertThrows(IllegalStateException.class, () ->
-            couponService.claimCoupon("user-1", "coupon-1")
-        );
+        assertThrows(IllegalStateException.class, () -> couponService.claimCoupon("user-1", "coupon-1"));
     }
 
     @Test
-    void claimCoupon_throwsWhenNewUserCouponForExistingUser() {
+    @DisplayName("claimCoupon throws when new user coupon claimed by existing user")
+    void claimCoupon_newUserCoupon_byExistingUser_throws() {
         User user = new User();
         user.setId("user-1");
 
@@ -198,19 +166,22 @@ class CouponServiceTest {
         coupon.setId("coupon-1");
         coupon.setCouponType(Coupon.CouponType.NEW_USER);
         coupon.setRemainingQuantity(10);
+        coupon.setActive(true);
 
         when(userRepository.findById("user-1")).thenReturn(Optional.of(user));
         when(couponRepository.findById("coupon-1")).thenReturn(Optional.of(coupon));
         when(userCouponRepository.existsByUserIdAndCouponId("user-1", "coupon-1")).thenReturn(false);
-        when(orderRepository.findByUserIdOrderByCreatedAtDesc("user-1")).thenReturn(List.of(new com.minimall.model.Order()));
+        when(orderRepository.findByUserIdOrderByCreatedAtDesc("user-1")).thenReturn(List.of(new Order()));
 
-        assertThrows(IllegalStateException.class, () ->
-            couponService.claimCoupon("user-1", "coupon-1")
-        );
+        assertThrows(IllegalStateException.class, () -> couponService.claimCoupon("user-1", "coupon-1"));
     }
 
     @Test
+    @DisplayName("getUserCoupons returns unused coupons for user")
     void getUserCoupons_returnsUnusedCoupons() {
+        User user = new User();
+        user.setId("user-1");
+
         Coupon coupon = new Coupon();
         coupon.setId("coupon-1");
         coupon.setCode("SAVE10");
@@ -219,18 +190,45 @@ class CouponServiceTest {
         coupon.setActive(true);
 
         UserCoupon userCoupon = new UserCoupon();
+        userCoupon.setUser(user);
         userCoupon.setCoupon(coupon);
-        userCoupon.setUsed(false);
 
         when(userCouponRepository.findByUserIdAndIsUsedFalse("user-1")).thenReturn(List.of(userCoupon));
 
         List<CouponResponse> result = couponService.getUserCoupons("user-1");
 
         assertEquals(1, result.size());
-        assertEquals("coupon-1", result.get(0).id());
+        assertEquals("SAVE10", result.get(0).code());
     }
 
     @Test
+    @DisplayName("createCoupon saves and returns coupon response")
+    void createCoupon_savesAndReturnsResponse() {
+        Instant now = Instant.now();
+        CouponRequest request = new CouponRequest(
+            "SAVE20", BigDecimal.valueOf(20), BigDecimal.valueOf(100),
+            now, now.plusSeconds(86400), 100, "CASH"
+        );
+
+        Coupon savedCoupon = new Coupon();
+        savedCoupon.setId("new-coupon");
+        savedCoupon.setCode("SAVE20");
+        savedCoupon.setCouponType(Coupon.CouponType.CASH);
+        savedCoupon.setDiscountAmount(BigDecimal.valueOf(20));
+        savedCoupon.setRemainingQuantity(100);
+        savedCoupon.setActive(true);
+
+        when(couponRepository.save(any(Coupon.class))).thenReturn(savedCoupon);
+
+        CouponResponse result = couponService.createCoupon(request);
+
+        assertNotNull(result);
+        assertEquals("SAVE20", result.code());
+        assertEquals(100, result.remainingQuantity());
+    }
+
+    @Test
+    @DisplayName("getNewUserCoupons returns new user coupons")
     void getNewUserCoupons_returnsNewUserCoupons() {
         Coupon coupon = new Coupon();
         coupon.setId("coupon-1");
